--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -11,7 +11,7 @@
     scroll-behavior: smooth;
 }
 body {
-    background: lighten($purple, 60%);
+    background: lighten($purple, 53%);
     width: 100%;
     margin: 0 auto;
 }
@@ -76,13 +76,14 @@ a {
 
 header {
     // border: 2px solid blue;
-    // padding-top: 5px;
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
-    z-index: 3;
-    background-color: lighten($purple, 55%);
+    z-index: 20;
+    // background-color: #8b4d797c;
+    background-color: lighten(#8b4d79b4, 50%);
+
 }
 
 #header__content {
@@ -95,8 +96,9 @@ header {
     height: 80px;
     // width: 100%;
     padding-bottom: 5px;
+    background-color: inherit;
     border-bottom: 1px solid grey;
-    margin-top: 5px;
+    padding-top: 5px;
 }
 
 #main__logo {
@@ -151,7 +153,7 @@ nav#nav ul {
     justify-content: space-around;
     gap: 5px;
     text-transform: uppercase;
-    font-size: 100%;
+    font-size: 105%;
     margin-right: 2rem;
 
     li {
@@ -176,17 +178,65 @@ nav#nav ul {
     }
 }
 
-div#header__services nav {
+div#header__services {
     // border: 2px solid green;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    background-color: transparent;
+    justify-content: space-around;
     align-items: center;
-    gap: 50px;
-    padding: 5px 0;
-    border-bottom: 1px solid grey;
+    gap: 20%;
+    // border-bottom: 1px solid grey;
     font-size: 90%;
+    position: relative;
+    padding: 0 20px;
+    max-width: 1000px;
+    margin: 0 auto;
+
+    li {
+        // border: 2px solid green;
+        padding: 5px 0px;
+        cursor: pointer;
+    }
 }
+
+div.service_dropdown {
+    // border: 2px solid green;
+    position: absolute;
+    z-index: -1;
+    top: -1000%;
+    // display: none;
+    width: 20vw;
+    min-width: 100px;
+    max-width: 200px;
+    background-color: lighten(#8b4d79b4, 50%);
+    font-size: 110%;
+    color: darken($purple, 30%);
+    overflow: hidden;
+    margin: 0 auto;
+    transition: all 0.75s ease-out;
+
+    &.show {
+        top: 100%;
+        // display: unset;
+    }
+
+    a {
+        // border: 2px solid red;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        // line-height: 150%;
+        font-size: 105%;
+        padding: 5px 10px;
+        text-align: left;
+        border-bottom: 1px solid grey;
+        cursor: pointer;
+        &:hover {
+            background-color: lighten($purple, 40%);
+        }
+    }   
+}
+
 
 
 // *************************************
@@ -210,32 +260,17 @@ footer {
 }
 
 div#footer {
-    // border: 2px solid green;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-content: center;
-}
-
-div#footer__nav {
-    // border: 2px solid green;
-    width: fit-content;
-    font-size: 120%;
-    font-weight: 600;
-    font-family: 'Ubuntu', sans-serif;
-    justify-self: end;
-    align-self: center;
+    // border: 2px solid red;
+    margin: 0 auto;
 }
 
 div#newsletter {
     // border: 2px solid green;
-    align-self: center;
-    margin: 0 20vw; //////
 
     h3 {
         // border: 2px solid green;
         text-align: center;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     form {
         // border: 2px solid green;
@@ -270,10 +305,9 @@ div#newsletter {
 }
 
 div#social__media {
-    // border: 2px solid green;
-    align-self: flex-end;
+    // border: 2px solid blue;
+    margin: 30px auto 10px;
     width: fit-content;
-    align-self: end;
 
     h3 {
         margin-bottom: 10px;
@@ -281,7 +315,10 @@ div#social__media {
     }
 
     ul {
+        // border: 2px solid blue;
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 30px;
 
         li {
@@ -303,21 +340,19 @@ div#social__media {
 }
 
 
-
-
 // ********************************************
 //                  MEDIA QUERRIES
 // *********************************************
 
 // ********************************************
-//                  LAPTOP (1024px)
+//                  LAPTOP (1025px)
 // *********************************************
 
 @media (max-width: 1025px) {
 
     #header__content {
         height: 60px;
-        margin-top: 3px;
+        padding-top: 3px;
     }
 
     #main__logo {
@@ -338,7 +373,7 @@ div#social__media {
     }
 
     nav#nav ul {
-        font-size: 80%;
+        font-size: 85%;
         // gap: 0.5px;
         margin-right: 1rem;
 
@@ -351,17 +386,14 @@ div#social__media {
     }
 }
 
-
-
 // *******************************************
-                // TABLETS (770px)
+                // TABLETS (780px)
 // *******************************************
 
 @media (max-width: 780px) {
 
     #header__content {
         height: 60px;
-        margin-top: 3px;
     }
     #main__logo {
         transform: scale(0.7);
@@ -380,12 +412,15 @@ div#social__media {
         }
     }
     nav#nav ul {
-        font-size: 60%;
-        margin-right: 1.5rem;
+        font-size: 05%;
+        margin-right: 1rem;
 
         li {
-            padding: 4px 9px;
+            padding: 4px 7px;
         }
+    }
+    div#header__services {
+        gap: 10%;
     }
 
     div#newsletter {
@@ -420,12 +455,11 @@ div#social__media {
         }
     }
 
-    div#footer__nav {
-        line-height: 100%;
-        font-size: 90%;
-    }
+    // div#footer__nav {
+    //     line-height: 100%;
+    //     font-size: 90%;
+    // }
 }
-
 
 
 // *******************************************
@@ -433,43 +467,43 @@ div#social__media {
 // *******************************************
 
 
-@media (max-width: 660px) {
-    #header__content {
-        // border: 2px solid green;
-        height: 50px;
-        margin-top: 0;
-    }
-    #main__logo {
-        // border: 2px solid green;
-        transform: scale(0.6);
-        margin-left: -1.5rem;
+// @media (max-width: 660px) {
+//     #header__content {
+//         // border: 2px solid green;
+//         height: 50px;
+//         margin-top: 0;
+//     }
+//     #main__logo {
+//         // border: 2px solid green;
+//         transform: scale(0.6);
+//         margin-left: -1.5rem;
 
-        img {
-            height: 50px;
-            width: 65px;
-        }
+//         img {
+//             height: 50px;
+//             width: 65px;
+//         }
 
-        div.texts {
-            margin-bottom: -1px;
-            margin-left: -1px;
+//         div.texts {
+//             margin-bottom: -1px;
+//             margin-left: -1px;
 
-            h1 {
-                font-size: 100%;
-            }
-        }
-    }
-    nav#nav ul {
-        font-size: 60%;
-        margin-right: 1rem;
+//             h1 {
+//                 font-size: 100%;
+//             }
+//         }
+//     }
+//     nav#nav ul {
+//         font-size: 60%;
+//         margin-right: 1rem;
 
-        li {
-            padding: 4px;
-        }
-    }
+//         li {
+//             padding: 4px;
+//         }
+//     }
 
-    div#header__services nav {
-        font-size: 70%;
-    }
-}
+//     div#header__services nav {
+//         font-size: 70%;
+//     }
+// }
 
 
