--- a/scss/about.scss
+++ b/scss/about.scss
@@ -2,16 +2,15 @@
 @import 'commons';
 
 main {
-    margin-top: 70px;
+    margin-top: 110px;
     width: 100%;
 }
 
 div#about__animation {
-    background-repeat: 2px solid red;
-    height: calc(100vh - 70px);
+    // border: 2px solid red;
+    height: calc(100vh - 110px);
     max-height: 1000px;
     width: 100%;
-
     img {
         width: 100%;
         height: 100%;
@@ -19,6 +18,7 @@ div#about__animation {
 }
 
 section#about {
+    // border: 2px solid red;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -26,22 +26,28 @@ section#about {
     gap: 5%;
     padding: 0 80px;
     margin: 20px 0 30px;
-    color: darken($purple, 30%);
+    // color: darken($purple, 30%);
 
 }
 .about__item {
     width: 45%;
-    background: lighten($orange, 40%);
+    min-height: 350px;
+    max-width: 400px;
+    // background: lighten($orange, 40%);
     box-shadow: 0.25px .25px 5px .25px rgba(128, 128, 128, 0.527);
     border: 1.5px solid lighten($purple, 35%);
     border-radius: 10px;
-    padding: 20px 15px;    
+    padding: 20px 35px;
+    color: darken($orange, 30%); 
+
+    // border: 2px solid green;
 
 
     &:nth-last-child(1) {
         flex-grow: 0.25;
-        margin-top: 20px;
+        margin-top: 50px;
         column-span: 2;
+        max-width: 600px;
 
     }
 
@@ -56,3 +62,46 @@ section#about {
         line-height: 20px;
     }
 }
+
+
+// ********************************************
+//                  MEDIA QUERRIES
+// *********************************************
+
+// ********************************************
+//                  LAPTOP (1025px)
+// *********************************************
+
+@media (max-width: 1025px) {
+    main {
+        margin-top: 90px;
+    }
+
+    div#about__animation {
+        // border: 2px solid red;
+        height: calc(100vh - 90px);
+    }
+
+}
+
+// ********************************************
+//                  TABLET (780px)
+// *********************************************
+
+@media (max-width: 780px) {
+    main {
+        margin-top: 90px;
+    }
+
+    div#about__animation {
+        // border: 2px solid red;
+        height: calc(100vh - 90px);
+    }
+    section#about {
+        padding: 0 20px;
+        // width: %;
+    }
+
+
+}
+
