--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,11 +1,5 @@
 @import 'config';
 @import 'commons';
-// @import 'facade';
-// @import 'about';
-// @import 'works';
-// @import 'testimonies';
-// @import 'contact';
-// @import 'tools';
 
 @font-face {
     font-family: 'BluuNext';
@@ -16,10 +10,8 @@
 //              INTRO PIC
 // **************************************
 div#intro__pic {
-    margin: 80px 0 0;
-    // border: 2px solid rgb(13, 250, 119);
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 100vh;
     background-image: url('../imgs/intro-pic.jpg');
     background-size: cover;
     background-repeat: none;
@@ -27,7 +19,7 @@ div#intro__pic {
     div#overlay {
         width: 100%;
         height: 100%;
-        background-color: rgba(128, 128, 128, 0.061);
+        background-color: rgba(128, 128, 128, 0.329);
     }
 }
 
@@ -48,7 +40,7 @@ div#intro__pic {
         height: 85%;
         width: 115%;
         padding-bottom: 20%;
-        background-image: url('/imgs/pressing laptop.svg');
+        background-image: url('../imgs/pressing laptop.svg');
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -140,7 +132,7 @@ div#ads {
 
     &__img {
         // border: 2px solid green;
-        background-image: url('/imgs/ad__pic.jpg');
+        background-image: url('../imgs/ad__pic.jpg');
         background-position: center;
         background-size: cover;
         border-radius: 7px;
@@ -155,7 +147,7 @@ div#ads {
 div#features {
     // border: 2px solid red;
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 2vw;
@@ -165,7 +157,6 @@ div#features {
 }
 div.feature {
     border: 2px solid lighten($purple, 40%);
-    width: 23%;
     padding: 0 15px 45px;
     border-radius: 7px;
     box-shadow: 0.25px .25px 5px .25px rgba(128, 128, 128, 0.527);
@@ -188,16 +179,16 @@ div.feature {
         background-repeat: no-repeat;
 
         &.first {
-            background-image: url('/imgs/ad__pic.jpg');
+            background-image: url('../imgs/ad__pic.jpg');
         }
         &.second {
-            background-image: url('/imgs/ad__pic.jpg');
+            background-image: url('../imgs/ad__pic.jpg');
         }
         &.third {
-            background-image: url('/imgs/ad__pic.jpg');
+            background-image: url('../imgs/ad__pic.jpg');
         }
         &.fourth {
-            background-image: url('/imgs/ad__pic.jpg');
+            background-image: url('../imgs/ad__pic.jpg');
         }
     }
     
@@ -209,12 +200,13 @@ div.feature {
 
 .tools {
     // border: 2px solid red;
-    padding: 75px 70px 0 ;
+    // padding: 10px 200px 0 ;
     @include text-font;
     background-image: url('/imgs/fottwhirl.svg');
     background-repeat: no-repeat;
     background-size: contain;
     width: 100%;
+    height: max-content;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -222,8 +214,11 @@ div.feature {
     justify-content: center;
 
     .header__content {
-        margin-top: 10px;
+        // margin-top: 150px;
         @include header;
+        position: relative;
+        right: 10%;
+        top: 80px;
     }
     
     &__list {
@@ -231,8 +226,8 @@ div.feature {
         display: grid;
         justify-self: center;
         align-self: center;
-        width: 80%;
-        margin-top: 100px;
+        width: 100%;
+        margin-top: 50px;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(3, 1fr);
 
@@ -259,12 +254,6 @@ div.feature {
 // *********************************************
 
 @media (max-width: 1025px) {
-
-    div#intro__pic {
-        margin: 65px 0 0;
-        height: calc(100vh - 60px);
-
-    }
 
     #facade {
         margin-top: 5px;
@@ -317,7 +306,7 @@ div.feature {
         }
 
         &__img {
-            border: 2px solid green;
+            // border: 2px solid green;
             height: 400px;
         }
 
@@ -336,8 +325,14 @@ div.feature {
         // border: 2px solid red;
         padding: 45px 60px 0 ;
 
+        .header__content {
+            // margin-top: 150px;
+            right: 7%;
+            top: 20px;
+        }
+
         &__list { 
-            margin-top: 5px;
+            margin-top: -20px;
 
             .tool {
                 // border: 2px solid green;
@@ -354,11 +349,6 @@ div.feature {
 // *******************************************
 
 @media (max-width: 770px) {
- 
-    div#intro__pic {
-        margin: 55px 0 0;
-        height: calc(100vh - 60px);
-    }
 
     #facade {
         padding: 0 40px;
@@ -437,7 +427,9 @@ div.feature {
         padding: 30px 60px 0 ;
 
         .header__content {
-            font-size: 100%;
+            right: 1%;
+            top: 7px;
+            font-size: 110%;
 
             .header__underline {
                 width: 50px;
@@ -445,186 +437,170 @@ div.feature {
         }
 
         &__list { 
-            margin-top: 50px;
+            margin-top: -25px;
             margin-bottom: 15px;
 
             .tool {
                 // border: 2px solid green;
-                transform: scale(0.75);
+                transform: scale(0.5);
             }
         }
+
 
     }
     
 }
 
 
-// *******************************************
-                // TABLETS (660px)
-// *******************************************
+// // *******************************************
+//                 // TABLETS (660px)
+// // *******************************************
 
-@media (max-width: 660px) {
+// @media (max-width: 660px) {
     
-// ******************
+// // ******************
 
-    div#intro__pic {
-        margin: 50px 0 0;
-        height: calc(100vh - 50px);
-    }
+//     div#intro__pic {
+//         margin: 50px 0 0;
+//         height: calc(100vh - 50px);
+//     }
 
-    #facade {
-        border: 2px solid green;
-        padding: 0 40px;
-        margin: 10px 0 35px;
-        padding-top: 20px;
-        grid-template-columns: 1.75fr 1fr;
+//     #facade {
+//         border: 2px solid green;
+//         padding: 0 40px;
+//         margin: 10px 0 35px;
+//         padding-top: 20px;
+//         grid-template-columns: 1.75fr 1fr;
 
-        &__text {
-            // border: 2px solid green;
-            margin-top: 0px;
-            padding-left: 0;
-            // padding-top: 90px;
+//         &__text {
+//             // border: 2px solid green;
+//             margin-top: 0px;
+//             padding-left: 0;
+//             // padding-top: 90px;
 
-            h2 {
-                font-size: 170%;
-                line-height: 90%;
-                // color: green;
-            }
-            p {
-                font-size: 16px;
-                line-height: 18px;
-                width: 95%;
-                margin-bottom: 30px;
-            }
-            a {
-                margin: 0px 0;
-            }
-        }
+//             h2 {
+//                 font-size: 170%;
+//                 line-height: 90%;
+//                 // color: green;
+//             }
+//             p {
+//                 font-size: 16px;
+//                 line-height: 18px;
+//                 width: 95%;
+//                 margin-bottom: 30px;
+//             }
+//             a {
+//                 margin: 0px 0;
+//             }
+//         }
 
-        &__img {
-            margin-top: -60%;
-        }
-    }
+//         &__img {
+//             margin-top: -60%;
+//         }
+//     }
 
-    div#ads {
-        grid-template-columns: 1.5fr 1fr;
-        padding: 0 30px;
-        gap: 10px;
+//     div#ads {
+//         grid-template-columns: 1.5fr 1fr;
+//         padding: 0 30px;
+//         gap: 10px;
 
-        &__text {
-            // border: 2px solid green;
-            margin: 0;
-            width: 100%;
-            h3 {
-                font-size: 130%;
-            }
-            p {
-                font-size: 18px;
-            }
-        }
+//         &__text {
+//             // border: 2px solid green;
+//             margin: 0;
+//             width: 100%;
+//             h3 {
+//                 font-size: 130%;
+//             }
+//             p {
+//                 font-size: 18px;
+//             }
+//         }
 
-        &__img {
-            // border: 2px solid green;
-            height: 320px;
-        }
-    }
-    div#features {
-        padding: 0 30px;
-    }
+//         &__img {
+//             // border: 2px solid green;
+//             height: 320px;
+//         }
+//     }
+//     div#features {
+//         padding: 0 30px;
+//     }
 
-    div.feature {
+//     div.feature {
 
-        &__text {
-            h3 {
-                margin-bottom: 5px;
-                font-size: 80%;
-            }
+//         &__text {
+//             h3 {
+//                 margin-bottom: 5px;
+//                 font-size: 80%;
+//             }
 
-            p {
-                line-height: 115%;
-                font-size: 75%;
-            }
-        }
-    }
+//             p {
+//                 line-height: 115%;
+//                 font-size: 75%;
+//             }
+//         }
+//     }
 
-    .tools {
-        // border: 2px solid red;
-        padding: 30px 60px 0 ;
+//     .tools {
+//         // border: 2px solid red;
+//         padding: 30px 60px 0 ;
 
-        .header__content {
-            font-size: 100%;
+//         .header__content {
+//             font-size: 100%;
 
-            .header__underline {
-                width: 50px;
-            }
-        }
+//             .header__underline {
+//                 width: 50px;
+//             }
+//         }
 
-        &__list { 
-            margin-top: 50px;
-            margin-bottom: 15px;
+//         &__list { 
+//             margin-top: 50px;
+//             margin-bottom: 15px;
 
-            .tool {
-                // border: 2px solid green;
-                transform: scale(0.75);
-            }
-        }
+//             .tool {
+//                 // border: 2px solid green;
+//                 transform: scale(0.75);
+//             }
+//         }
 
-    }
-// *********************
+//     }
+// // *********************
 
+//     div#newsletter {
+//         margin: 0 7vw;
 
+//         h3 {
+//             font-size: 90%;
+//             font-weight: 400;
+//             margin-bottom: 5px;
+//         }
 
-
-
-
-
-
-
-
-
-
-
-    div#newsletter {
-        margin: 0 7vw;
-
-        h3 {
-            font-size: 90%;
-            font-weight: 400;
-            margin-bottom: 5px;
-        }
-
-        form {
-            // border: 2px solid green;
+//         form {
+//             // border: 2px solid green;
             
-            input {
-                height: 35px;
-                width: 300px;
-                font-size: 16px;
-            }
+//             input {
+//                 height: 35px;
+//                 width: 300px;
+//                 font-size: 16px;
+//             }
     
-            button {
-                font-size: 14px;    
-            }
+//             button {
+//                 font-size: 14px;    
+//             }
 
-        }
-    }
+//         }
+//     }
 
-    div#social__media {  
-        h3 {
-            margin-bottom: 5px;
-            font-size: 90%;
-        }
-    }
+//     div#social__media {  
+//         h3 {
+//             margin-bottom: 5px;
+//             font-size: 90%;
+//         }
+//     }
 
-    div#footer__nav {
-        line-height: 100%;
-        font-size: 90%;
-    }
+//     div#footer__nav {
+//         line-height: 100%;
+//         font-size: 90%;
+//     }
 
-}
-
-
-
-
-
+// }
 
