--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -24,6 +24,7 @@ $orange: #eba342;
 
 @mixin header {
     // color: white;
+    // border: 2px solid red;
     width: max-content;
     font-size: 30px;
     margin-bottom: 20px;
