--- a/src/css/our-works.css
+++ b/src/css/our-works.css
@@ -22,17 +22,8 @@ body {
 }
 
 .image-video-preview img {
-  height: 70vh;
+  height: 90%;
   width: auto;
-}
-
-@media only screen and (max-width: 600px) {
-  .image-video-preview img {
-    max-height: 80vh;
-    max-width: 100%;
-    width: auto;
-    height: auto;
-  }
 }
 
 .image-video-preview iframe {
@@ -67,12 +58,6 @@ body {
   }
 }
 
-@media only screen and (max-width: 500px) {
-  .intro-text {
-    font-size: .8rem;
-  }
-}
-
 .works-container {
   margin-top: 100px;
 }
@@ -86,33 +71,27 @@ body {
   text-transform: uppercase;
 }
 
-@media only screen and (max-width: 600px) {
-  .section-header {
-    font-size: .7rem;
-  }
-}
-
 .graphics-design, .video-animation, .programming-tech {
   margin-bottom: 30px;
 }
 
 .graphics-design > div, .video-animation > div, .programming-tech > div {
-  margin-left: 8vw;
+  margin-left: 100px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .graphics-design > div, .video-animation > div, .programming-tech > div {
-    margin-left: 12vw;
+    margin-left: 30px;
   }
 }
 
 .graphics-design > section, .video-animation > section, .programming-tech > section {
-  margin-left: 5vw;
+  margin-left: 50px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .graphics-design > section, .video-animation > section, .programming-tech > section {
-    margin-left: 8vw;
+    margin-left: 30px;
   }
 }
 
@@ -122,31 +101,29 @@ body {
   font-weight: bold;
 }
 
-@media only screen and (max-width: 600px) {
-  .sub-section-header {
-    font-size: .7rem;
-  }
-}
-
 .sub-section-header {
   margin: 20px 0;
 }
 
 .works {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin-left: 3vw;
-  margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 50px;
 }
 
-.works > div:nth-child(2n) {
-  margin-top: 50%;
+.works > div:nth-child(2n + 1) {
+  margin-top: 150px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
+  .works > div:nth-child(2n + 1) {
+    margin-top: 70px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
   .works {
-    grid-template-columns: repeat(2, 1fr);
-    margin-left: 4vw;
+    margin-left: 0px;
   }
 }
 
@@ -183,13 +160,12 @@ body {
   overflow: hidden;
   background-color: #838282;
   border-radius: 5%;
-  margin: 0;
+  margin: 50px 0;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .work-img {
-    width: max(50px, min(30vw, 200px));
-    height: max(100px, min(40vw, 300px));
+    margin: 20px 0;
   }
 }
 
@@ -212,10 +188,6 @@ body {
   content: 'click to view';
   border-radius: 10px;
   cursor: pointer;
-}
-
-.video-animation .section-header {
-  margin-bottom: 50px;
 }
 
 .video-animation .work-img {
@@ -241,15 +213,15 @@ body {
   transform: scale(1.5);
 }
 
-.programming-tech .section-header {
-  margin-bottom: 50px;
+.programming-tech .work-container {
+  margin: 50px 0;
 }
 
-.programming-tech .work-img {
+.programming-tech .work-container .work-img {
   margin: 0 0 5px 0;
 }
 
-.programming-tech a {
+.programming-tech .work-container a {
   display: flex;
   align-items: flex-start;
   color: purple;
@@ -257,31 +229,31 @@ body {
   font-size: 16px;
 }
 
-.programming-tech a img {
+.programming-tech .work-container a img {
   width: 15px;
   height: 15px;
   margin-right: 5px;
 }
 
-.programming-tech a:hover {
+.programming-tech .work-container a:hover {
   text-decoration: underline;
 }
 
 @media only screen and (max-width: 1000px) {
-  .programming-tech a {
+  .programming-tech .work-container a {
     font-size: 14px;
   }
-  .programming-tech a img {
+  .programming-tech .work-container a img {
     width: 12px;
     height: 12px;
   }
 }
 
 @media only screen and (max-width: 800px) {
-  .programming-tech a {
+  .programming-tech .work-container a {
     font-size: 12px;
   }
-  .programming-tech a img {
+  .programming-tech .work-container a img {
     width: 10px;
     height: 10px;
   }
