"After Tayo's mobile responsiveness"

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -398,6 +398,9 @@ div.feature {
             p {
                 font-size: 18px;
             }
+            ul {
+                font-size: 90%;
+            }
         }
 
         &__img {
