--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -358,7 +358,7 @@ div#social__media {
         div.texts {
 
             h1 {
-                font-size: 18px;
+                font-size: 16px;
             }
         }
     }
@@ -387,7 +387,7 @@ div#social__media {
         height: 60px;
     }
     #main__logo {
-        border: 2px solid red;
+        // border: 2px solid red;
         // transform: scale(0.7);
         margin-left: 1rem;
 
@@ -400,7 +400,10 @@ div#social__media {
             // transform: scale(0.8);
 
             h1 {
-                font-size: 110%;
+                font-size: 14px;
+            }
+            h5 {
+                font-size: 12.5px;
             }
         }
     }
@@ -457,47 +460,47 @@ div#social__media {
 
 
 // *******************************************
-                // TABLETS (660px)
+                // MOBILE VIEW (60px)
 // *******************************************
 
 
-// @media (max-width: 660px) {
-//     #header__content {
-//         // border: 2px solid green;
-//         height: 50px;
-//         margin-top: 0;
-//     }
-//     #main__logo {
-//         // border: 2px solid green;
-//         transform: scale(0.6);
-//         margin-left: -1.5rem;
+// @media (max-width: 601px) {
+    // #header__content {
+    //     // border: 2px solid green;
+    //     height: 50px;
+    //     margin-top: 0;
+    // }
+    // #main__logo {
+    //     // border: 2px solid green;
+    //     transform: scale(0.6);
+    //     margin-left: -1.5rem;
 
-//         img {
-//             height: 50px;
-//             width: 65px;
-//         }
+    //     img {
+    //         height: 50px;
+    //         width: 65px;
+    //     }
 
-//         div.texts {
-//             margin-bottom: -1px;
-//             margin-left: -1px;
+    //     div.texts {
+    //         margin-bottom: -1px;
+    //         margin-left: -1px;
 
-//             h1 {
-//                 font-size: 100%;
-//             }
-//         }
-//     }
-//     nav#nav ul {
-//         font-size: 60%;
-//         margin-right: 1rem;
+    //         h1 {
+    //             font-size: 100%;
+    //         }
+    //     }
+    // }
+    // nav#nav ul {
+    //     font-size: 60%;
+    //     margin-right: 1rem;
 
-//         li {
-//             padding: 4px;
-//         }
-//     }
+    //     li {
+    //         padding: 4px;
+    //     }
+    // }
 
-//     div#header__services nav {
-//         font-size: 70%;
-//     }
+    // div#header__services nav {
+    //     font-size: 70%;
+    // }
 // }
 
 
