--- a/scss/home.scss
+++ b/scss/home.scss
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'BluuNext';
-    src: url('../BluuNext-Bold.otf');
+    src: url('../fonts/BluuNext-Bold.otf');
 }
 
 // **************************************
