"Included the header services contents"

--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -212,6 +212,18 @@ div.service_dropdown {
         height: 200px;
         // transition: all 0.75s ease-out;
 
+        &#g_and_a {
+            height: 200px;
+        }
+
+        &#vid_and_anim {
+            height: 80px;
+        }
+
+        &#prog_and_tech {
+            height: 200px;
+        }
+
     }
     
     a {
